[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Shooter.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Specials/Shield.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Star.png" type="Texture" id=5]
[ext_resource path="res://Audio/Shoot.ogg" type="AudioStream" id=6]
[ext_resource path="res://Audio/GameOver.ogg" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 39.1945
height = 21.4437

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.68756
height = 5.97977

[sub_resource type="CircleShape2D" id=3]
radius = 105.93

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.495454 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 600, 540 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="pSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PhurtArea" type="Area2D" parent="."]
position = Vector2( 1.8007, 0 )

[node name="pHurtCol" type="CollisionShape2D" parent="PhurtArea"]
visible = false
position = Vector2( -9.00366, 0 )
shape = SubResource( 1 )

[node name="pCol" type="CollisionShape2D" parent="."]
position = Vector2( -12.4283, 0 )
shape = SubResource( 2 )
disabled = true

[node name="S1sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 30, 0 )
texture = ExtResource( 3 )

[node name="S2sprite" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 10, -33 )
texture = ExtResource( 3 )

[node name="S3sprite" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 10, 33 )
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Shooter1" type="Position2D" parent="."]
position = Vector2( 67.1494, 0 )

[node name="Shooter2" type="Position2D" parent="."]
position = Vector2( 50, -33 )

[node name="Shooter3" type="Position2D" parent="."]
position = Vector2( 50, 33 )
__meta__ = {
"_editor_description_": ""
}

[node name="pCamera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 2.0

[node name="ShieldArea" type="Area2D" parent="."]
visible = false
position = Vector2( -11.7047, 0 )

[node name="ShieldSprite" type="Sprite" parent="ShieldArea"]
texture = ExtResource( 4 )

[node name="ShieldCol" type="CollisionShape2D" parent="ShieldArea"]
shape = SubResource( 3 )

[node name="Particle1" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( -45.7774, -33.3947 )
emitting = false
amount = 10
local_coords = false
texture = ExtResource( 5 )
direction = Vector2( -1, 0 )
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 4 )

[node name="Particle2" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( -45.777, 33.395 )
emitting = false
amount = 10
local_coords = false
texture = ExtResource( 5 )
direction = Vector2( -1, 0 )
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 4 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
mix_target = 2

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
mix_target = 2
